--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ nav{
 }
 
 h1{
-    font-size: 28px;
+    font-size: 30px;
     font-style: bold;
     color: rgb(92, 200, 255);
 }
@@ -41,21 +41,28 @@ h1{
 }
 
 h2{
-    font-size: 20px;
+    font-size: 22px;
     margin-bottom: 20px;
     font-weight: bolder;
 }   
 
+h3{
+    font-size: 20px;
+    margin-bottom: 20px;
+    font-weight: bolder;
+}
+
 strong{
     font-weight: bolder;
 }
+
 a{
     display: flex;
     justify-content: center;
     align-items: center;
     text-decoration: none;
     color: white;
-    font-size: 14px;
+    font-size: 16px;
     height: 50px;
     transition: all 0.3s linear;
     padding: 0px 6px;
@@ -117,13 +124,35 @@ a:hover{
     color:#343633;
 }
 
+#projetos{
+    background-color: #343633;
+    color: azure;
+}
+
+#projetos h2, h3{
+    color: #5CC8FF;
+}
+
+.projeto{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    background-color:rgba(147, 134, 127, 0.3);
+    border-radius: 10px;
+    border: solid 1px #5CC8FF;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    color: white;
+    margin: 20px 0px;
+    padding: 10px;
+}
+
 #contato h2{
     color: #343633;
 }
 
 #sobre p{
     color: #343633;
-    font-size: 16px;
+    font-size: 18px;
     text-align: justify;
     font-style: oblique;
     line-height: 1.6;
@@ -132,11 +161,6 @@ a:hover{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-}
-
-#projetos{
-    background-color: #343633;
-    color: azure;
 }
 
 #contato{
