--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,6 @@ header{
 }
 
 section{
-    background-color: red;
     padding: 50px 20px 50px 20px;
 }
 
@@ -194,6 +193,24 @@ p{
     height: 100%;
 }
 
+#tecnologias{
+    margin-top: 10px;
+}
+
+#projetos .icones{
+    width: 100%;
+    margin: 20px 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#projetos i{
+    font-size: 40px;
+    margin: 0px 10px;
+}
+
 /* Contato */
 #contato h2{
     color: #343633;
@@ -218,9 +235,8 @@ p{
     align-items: center;
 }
 
-.icones a {
+.icones a{
   display: inline-block;
-  font-size: 32px; /* Tamaño de los íconos */
   margin: 0 10px;
   color: #343633;
   transition: all .3s ease;
@@ -234,6 +250,7 @@ i{
     font-size: 50px;
     margin: 0px 10px;
 }
+
 form{
     display: flex;
     flex-direction: column;
@@ -279,4 +296,158 @@ footer{
 
 footer p{
     text-align: center;
+}
+
+@media(min-width: 480px){
+    #inteiro{
+        display: block;
+    }
+    #pequeno{
+        display: none;
+    }
+
+    nav{
+        width: 50%;
+    }
+
+    h1{
+        font-size: 28px;
+    }
+
+    h2{
+        font-size: 24px;
+    }
+
+    h3{
+        font-size: 22px;
+    }
+
+    header a{
+        font-size: 18px;
+    }
+
+    #sobre p{
+        font-size: 20px;
+    }
+
+    #projetos i{
+        font-size: 45px;
+    }
+
+    i{
+        font-size: 60px;
+    }
+}
+
+@media(min-width: 768px){
+
+    header{
+        height: 70px;
+    }
+
+    header a{
+        height: 70px;
+    }
+
+    section{
+        padding: 70px 40px 50px 40px;
+    }
+
+    nav{
+        width: 40%;
+    }
+
+    .sobre{
+        padding: 70px 40px 50px 40px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+    }
+
+    #sobre{
+        width: 100%;
+        height: 100%;
+    }
+
+    .images{
+        padding-top: 70px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 350px;
+    }
+    
+    .img-sobre{
+        height: 450px;
+        object-fit: cover;
+        border-radius: 10px;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    }
+    
+    .foto{
+        position: absolute;
+        margin: 8px;
+        border-radius: 50%;
+        border: 1px solid #343633;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        width: 200px;
+        height: 200px;
+    }
+
+    h1{
+        font-size: 30px;
+    }
+
+    h2{
+        font-size: 26px;
+    }
+
+    h3{
+        font-size: 24px;
+    }
+
+    header a{
+        font-size: 20px;
+    }
+
+    #sobre p{
+        font-size: 22px;
+    }
+
+    #projetos{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .projetos{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .projeto{
+        width: 300px;
+        margin: 20px 20px;
+    }
+
+    #projetos i{
+        font-size: 50px;
+    }
+
+    i{
+        font-size: 70px;
+    }
+
+    form{
+        width: 50%;
+    }
+
+    #contato{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
