--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ html {
 
 body{
     font-family: 'Poppins', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 header{
@@ -40,8 +43,9 @@ h1{
 
 h2{
     font-size: 22px;
-    margin: 20px 0px;
+    margin: 30px 0px;
     font-weight: bolder;
+    text-align: center;
 }   
 
 h3{
@@ -339,6 +343,12 @@ footer p{
         flex-direction: column;
     }
 
+    .sobre{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
     .projetos{
         width: 100%;
         display: flex;
@@ -424,19 +434,19 @@ footer p{
     }
 
     h1{
-        font-size: 30px;
+        font-size: 32px;
     }
 
     h2{
-        font-size: 26px;
+        font-size: 28px;
     }
 
     h3{
-        font-size: 24px;
+        font-size: 26px;
     }
 
     header a{
-        font-size: 20px;
+        font-size: 22px;
     }
 
     #sobre p{
@@ -452,6 +462,103 @@ footer p{
     }
 
     form{
-        width: 50%;
+        width: 70%;
+    }
+
+    input{
+        height: 40px;
+    }
+
+    textarea{
+        height: 100px;
     }
 }
+
+@media (min-width: 1024px){
+
+    header{
+        height: 60px;
+    }
+
+    header a{
+        height: 60px;
+    }
+
+    section{
+        padding: 60px 80px 50px 80px;
+    }
+
+    nav{
+        width: 30%;
+    }
+
+    .sobre{
+        padding: 60px 60px 50px 60px;   
+    }
+
+    .images{
+        padding-top: 60px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 400px;
+    }
+    
+    .img-sobre{
+        height: 500px;
+        object-fit: cover;
+        border-radius: 10px;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    }
+    
+    .foto{
+        position: absolute;
+        margin: 8px;
+        border-radius: 50%;
+        border: 1px solid #343633;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        width: 250px;
+        height: 250px;
+    }
+
+    h1{
+        font-size: 32px;
+    }
+
+    h2{
+        font-size: 30px;
+    }
+
+    h3{
+        font-size: 26px;
+    }
+
+    header a{
+        font-size: 24px;
+    }
+
+    #sobre p{
+        font-size: 24px;
+    }
+
+    #projetos i{
+        font-size: 55px;
+    }
+
+    i{
+        font-size: 80px;
+    }
+
+    form{
+        width: 60%;
+        max-width: 470px;
+    }   
+}
+
+@media(min-width: 1200px)
+{
+    .sobre #sobre2{
+        max-width: 1400px;
+    }
+}
+
