--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@ body{
     font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 header{
@@ -25,6 +24,11 @@ header{
 
 section{
     padding: 50px 20px 50px 20px;
+    width: 100%;
+}
+
+#sobre1{
+    width: 100%;
 }
 
 nav{
@@ -361,6 +365,10 @@ footer p{
         margin: 20px 20px;
     }
 
+    .descricao{
+        height: 130px;
+    }
+
     form{
         width: 70%;
     }
@@ -501,7 +509,6 @@ footer p{
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 400px;
     }
     
     .img-sobre{
@@ -509,6 +516,7 @@ footer p{
         object-fit: cover;
         border-radius: 10px;
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        width: 270px;
     }
     
     .foto{
@@ -557,8 +565,8 @@ footer p{
 
 @media(min-width: 1200px)
 {
-    .sobre #sobre2{
-        max-width: 1400px;
+    #sobre2{
+        max-width: 1200px;
     }
 }
 
