Ajustando estilos no CSS para a seção "Sobre", adicionando padding ao elemento sobre2

--- a/styles.css
+++ b/styles.css
@@ -105,11 +105,14 @@ p{
 
 /* Sobre */
 .images{
-    padding-top: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
+}
+
+#sobre2{
+    padding: 0px 40px;
 }
 
 .img-sobre{
