--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,7 @@ p{
     flex-direction: column;    
     align-items: center;
     background-color: white;
+    padding-right: 0px;
 }
 
 #sobre h2{
