--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@ body{
 }
 
 header{
-    background-color: #1B262C;
-    box-shadow: 1px 2px 2px rgba(255, 255, 255, 0.3);
+    background-color: #071359;
+    box-shadow: 2px 2px 5px rgba(242, 242, 242, 0.25);
     position: fixed;
     display: flex;
     flex-direction: row;
@@ -20,6 +20,10 @@ header{
     width: 100%;
     padding: 0px 18px;
     z-index: 1000;
+}
+
+main{
+    background-color: #F2F2F2;
 }
 
 section{
@@ -38,7 +42,7 @@ nav{
 h1{
     font-size: 1.8rem;
     font-style: bold;
-    color: #FFFFFF;
+    color: #F2F2F2;
 }
 
 #inteiro{
@@ -69,7 +73,7 @@ header a{
     justify-content: center;
     align-items: center;
     text-decoration: none;
-    color: #FFFFFF;
+    color: #F2F2F2;
     font-size: 1rem;
     height: 50px;
     transition: all 0.3s ease;
@@ -99,8 +103,8 @@ p{
 }
 
 .menu a:hover{
-    background-color: #FFFFFF;
-    color: #1B262C;
+    background-color: #F2F2F2;
+    color: #071359;
 }
 
 /* Sobre */
@@ -109,29 +113,27 @@ p{
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding-top: 50px;
+    padding-top: 70px;
 }
 
 #sobre2{
-    padding: 20px 40px;
+    padding: 0px 40px;
 }
 
 .img-sobre{
     border-radius: 10px;
-    padding: 0px 0px;
     height: 150px;
     width: 100%;
     object-fit: cover;
-    box-shadow: 1px 2px 2px rgba(255, 255, 255, 0.3);
-
+    box-shadow: 2px 2px 5px rgba(242, 242, 242, 0.25);
 }
 
 .foto{
     position: absolute;
     margin: 8px;
     border-radius: 50%;
-    border: 1px solid #1B262C;
-    box-shadow: 1px 2px 2px rgba(255, 255, 255, 0.3);
+    border: 1px solid #071359;
+    box-shadow: 2px 2px 5px rgba(242, 242, 242, 0.25);
     width: 140px;
     height: 140px;
 }
@@ -140,15 +142,11 @@ p{
     display: flex;
     flex-direction: column;    
     align-items: center;
-    background-color: #FFFFFF;
+    background-color: #F2F2F2;
 }
 
-#sobre h2{
-    color:#1B262C;
-}
-
-#sobre p{
-    color: #1B262C;
+#sobre h2, #sobre p, #projetos h3{
+    color:#071359;
 }
 
 .conteudo{
@@ -159,23 +157,19 @@ p{
 
 /* Projetos */
 #projetos{
-    background-color: #1B262C;
-    color: #FFFFFF;
-}
-
-#projetos h2, h3{
-    color: #1B262C;
+    background-color: #071359;
+    color: #F2F2F2;
 }
 
 .projeto{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    background-color: #FFFFFF;
+    background-color: #F2F2F2;
     border-radius: 10px;
-    border: solid 1px #FFFFFF;
-    box-shadow: 1px 2px 2px rgba(255, 255, 255, 0.3);
-    color: #1B262C;
+    border: solid 1px #F2F2F2;
+    box-shadow: 2px 2px 5px rgba(242, 242, 242, 0.25);
+    color: #071359;
     margin: 20px 0px;
     padding: 20px;
 }
@@ -200,20 +194,20 @@ p{
 }
 
 .projeto button{
-    background-color: #1B262C;
-    color: #FFFFFF;
+    background-color: #071359;
+    color: #F2F2F2;
     border: none;
     border-radius: 5px;
-    box-shadow: 1px 2px 2px rgba(255, 255, 255, 0.3);
+    box-shadow: 2px 2px 5px rgba(242, 242, 242, 0.25);
     padding: 0px 10px;
     cursor: pointer;
     height: 100%;
 }
 
 .projeto button:hover{
-    border: 1px solid #1B262C;;
-    background-color: #FFFFFF;
-    color: #1B262C;
+    border: 1px solid #071359;;
+    background-color: #F2F2F2;
+    color: #071359;
 }
 
 #tecnologias{
@@ -229,13 +223,18 @@ p{
     align-items: center;
 }
 
+.projeto i{
+    transition: all .3s ease; 
+}
+
+
 /* Contato */
 #contato h2{
-    color: #1B262C;
+    color: #071359;
 }
 
 #contato h3{
-    color: #1B262C;
+    color: #071359;
     margin: 30px 10px 10px;
 }
 
@@ -254,12 +253,12 @@ p{
 .icones a{
   display: inline-block;
   margin: 0 10px;
-  color: #1B262C;
+  color: #071359;
   transition: all .3s ease;
 }
 
-.icones a:hover {
-  transform: scale(1.2); 
+.icones a:hover, .projeto i:hover{
+  transform: scale(1.2);
 }
 
 i{
@@ -273,10 +272,10 @@ form{
     align-items: start;
     justify-content: center;
     padding: 20px;
-    background-color:   #1B262C;
+    background-color:   #071359;
     border-radius: 10px;
-    box-shadow: 1px 2px 2px rgba(255, 255, 255, 0.3);
-    color: #FFFFFF;
+    box-shadow: 2px 2px 5px rgba(242, 242, 242, 0.25);
+    color: #F2F2F2;
 }
 
 input, textarea{
@@ -294,23 +293,23 @@ form button{
     border: none;
     border-radius: 5px;
     border: 1px solid;
-    background-color: #FFFFFF;
-    color: #1B262C;
+    background-color: #F2F2F2;
+    color: #071359;
     cursor: pointer;
     transition: all .3s ease;
 }
 
 form button:hover{
-    border: 1px solid #FFFFFF;
-    background-color: #1B262C;
-    color: #FFFFFF;
+    border: 1px solid #F2F2F2;
+    background-color: #071359;
+    color: #F2F2F2;
 }
 
 /* Footer */
 footer{
     width: 100%;
-    background-color: #1B262C;
-    color: #FFFFFF;
+    background-color: #071359;
+    color: #F2F2F2;
     padding: 5px 0px;
 }
 
@@ -319,6 +318,7 @@ footer p{
 }
 
 @media(min-width: 480px){
+    
     #inteiro{
         display: block;
     }
@@ -417,7 +417,6 @@ footer p{
     }
 
     .images{
-        padding-top: 70px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -428,15 +427,15 @@ footer p{
         height: 450px;
         object-fit: cover;
         border-radius: 10px;
-        box-shadow: 1px 2px 2px rgba(255, 255, 255, 0.3);
+        box-shadow: 2px 2px 5px rgba(242, 242, 242, 0.25);
     }
     
     .foto{
         position: absolute;
         margin: 8px;
         border-radius: 50%;
-        border: 1px solid #1B262C;
-        box-shadow: 1px 2px 2px rgba(255, 255, 255, 0.3);
+        border: 1px solid #071359;
+        box-shadow: 2px 2px 5px rgba(242, 242, 242, 0.25);
         width: 200px;
         height: 200px;
     }
@@ -503,7 +502,7 @@ footer p{
         height: 500px;
         object-fit: cover;
         border-radius: 10px;
-        box-shadow: 1px 2px 2px rgba(255, 255, 255, 0.3);
+        box-shadow: 2px 2px 5px rgba(242, 242, 242, 0.25);
         width: 270px;
     }
     
@@ -511,8 +510,8 @@ footer p{
         position: absolute;
         margin: 8px;
         border-radius: 50%;
-        border: 1px solid #1B262C;
-        box-shadow: 1px 2px 2px rgba(255, 255, 255, 0.3);
+        border: 1px solid #071359;
+        box-shadow: 2px 2px 5px rgba(242, 242, 242, 0.25);
         width: 250px;
         height: 250px;
     }
